--- a/app/views/leftNav.html
+++ b/app/views/leftNav.html
@@ -38,10 +38,10 @@
 		<div class="cr8-campaign"><a [routerLink]="['/createCampaign', user.id]" class="btn btn-green1">CREATE CAMPAIGN</a></div>
 		<div class="user-account-options">
 			<ul>
-				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Dashboard</a></li>
 				<li class="li-campaign"><a [routerLink]="['/mCampaigns', user.id]" [routerLinkActive]="['is-active']">My Campaigns</a></li>
 				<li class="li-perks"><a [routerLink]="['/mAudiences', user.id]" [routerLinkActive]="['is-active']">Audience Lab</a></li>
 				<li class="li-content"><a [routerLink]="['/contentFeed', user.id]" [routerLinkActive]="['is-active']">Post Feed</a></li>
+				<li class="li-reporting"><a [routerLink]="['/reporting', user.id]" [routerLinkActive]="['is-active']">Reporting</a></li>
 			</ul>
 		</div>
 	</div>
