--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -49,7 +49,7 @@
 	<div class="grid-100 mobile-grid-100 stats" align="left" *ngIf="campaignCycles[cmp.id]">
 		<h6>Campaign cycle:</h6>
 		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
+			<dl class="palette {{cycleClassName(cmp.id, 'matched')}}" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
 				<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;"># Inf Matched</dt>
 				<dd>{{campaignCycles[cmp.id].matched | fmtNum }}</dd>
 			</dl>
@@ -58,7 +58,7 @@
 			<div style="margin-top:20px;"><i class="fui-arrow-right" title="arrowRight"></i></div>
 		</div>
 		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-wet-asphalt" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
+			<dl class="palette {{cycleClassName(cmp.id, 'notified')}}" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
 				<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Notified</dt>
 				<dd>{{campaignCycles[cmp.id].notified | fmtNum }}</dd>
 			</dl>
@@ -67,7 +67,7 @@
 				<div style="margin-top:20px;"><i class="fui-arrow-right" title="arrowRight"></i></div>
 		</div>
 		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-alizarin" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
+			<dl class="palette {{cycleClassName(cmp.id, 'accepted')}}" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
 				<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Accepted</dt>
 				<dd>{{campaignCycles[cmp.id].accepted | fmtNum }}</dd>
 			</dl>
@@ -76,7 +76,7 @@
 				<div style="margin-top:20px;"><i class="fui-arrow-right" title="arrowRight"></i></div>
 		</div>
 		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-silver" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
+			<dl class="palette {{cycleClassName(cmp.id, 'perks')}}" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
 				<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Sent Perks</dt>
 				<dd>{{campaignCycles[cmp.id].perks | fmtNum }}</dd>
 			</dl>
@@ -85,7 +85,7 @@
 				<div style="margin-top:20px;"><i class="fui-arrow-right" title="arrowRight"></i></div>
 		</div>
 		<div class="pallete-item" style="margin-left: 0px;">
-			<dl class="palette palette-silver" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
+			<dl class="palette {{cycleClassName(cmp.id, 'completed')}}" style="border-radius: 10px; margin-bottom: 10px; padding: 15px;">
 				<dt style="font-size: 12px; opacity: 1; text-transform: uppercase;">Posts made</dt>
 				<dd>{{campaignCycles[cmp.id].completed | fmtNum }}</dd>
 			</dl>
